migrate to the representation API
